--- a/index_jp.html
+++ b/index_jp.html
@@ -34,7 +34,7 @@
     STYLESHEETS
     =========================== -->    
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome-animation.min.css">
     <link rel="stylesheet" href="css/preloader.css">
     <link rel="stylesheet" href="css/style.css">
@@ -51,6 +51,11 @@
     GOOGLE FONTS
     =========================== -->    
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Antic|Raleway:300">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Ubuntu+Mono" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/earlyaccess/notosansjp.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/earlyaccess/notosanstc.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/earlyaccess/notosanssc.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/earlyaccess/notosanskr.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -159,8 +164,8 @@
              <p class="wow fadeInDown" data-wow-duration="3s">二のモードに：　ＲＰＧ　「Vast-Light World」　と　ノーマル　「マインクラフト　石英 - Minecraft QUARTZ」</p>
              <div id="downloads">
              <br /><br />
-             <button class="wow fadeInDown after-button after-button-orange after-button-font-18px fa fa-cloud-download" onclick="window.open('down/vast-light_installer.exe')" data-wow-duration="4s"><font face="Antic"> クライアントのインスト</font></a></button>
-			 <button class="wow fadeInDown after-button after-button-lightsalmon after-button-font-14px fa fa-cloud-download" onclick="window.open('https://download.microsoft.com/download/9/5/A/95A9616B-7A37-4AF6-BC36-D6EA96C8DAAE/dotNetFx40_Full_x86_x64.exe')" data-wow-duration="4s"><font face="Antic"> ランタイムのインスト (.NET 4)</font></a></button>
+             <button class="wow fadeInDown after-button after-button-orange after-button-font-18px fa fa-cloud-download" onclick="window.open('down/vast-light_installer.exe')" data-wow-duration="4s"> クライアントのインスト</a></button>
+			 <button class="wow fadeInDown after-button after-button-lightsalmon after-button-font-14px fa fa-cloud-download" onclick="window.open('https://download.microsoft.com/download/9/5/A/95A9616B-7A37-4AF6-BC36-D6EA96C8DAAE/dotNetFx40_Full_x86_x64.exe')" data-wow-duration="4s"> ランタイムのインスト (.NET 4)</a></button>
              </div>
              </div> <!-- ABOUT INFO END -->
              
@@ -261,7 +266,7 @@
 		<br /><br />
 		貴方のメッセージは:<br /><textarea name="CONT" style="width:480px;height:300px;" autocomplete="off" placeholder="貴方はメッセージを書きます。"></textarea>
 		<br /><br />
-		<button class="wow fadeInDown after-button after-button-orangered after-button-font-14px fa fa-arrow-circle-right" onclick="sgf.submit()" data-wow-duration="2s"><font face="Antic"> 送信</font></a></button>
+		<button class="wow fadeInDown after-button after-button-orangered after-button-font-14px fa fa-arrow-circle-right" onclick="sgf.submit()" data-wow-duration="2s"> 送信</a></button>
 	</form>
 
     </div><!-- SUPPORT SECTION END -->
