--- a/index_en.html
+++ b/index_en.html
@@ -121,7 +121,7 @@
 						<li><a href="#preview"><span class="btnicon fa fa-eye"></span>Preview</a></li>
 						<li><a href="#support"><span class="btnicon fa fa-envelope-o"></span>Support</a></li>
 						<li><a href="mailto:web@vast-light.iask.in"><span class="btnicon fa fa-phone"></span>Contact</a></li>
-            <li class="active"><a href="dynamic/user/register.php"><span class="btnicon fa fa-user"></span>User Register</a></li>
+            <!--<li class="active"><a href="dynamic/user/register.php"><span class="btnicon fa fa-user"></span>User Register</a></li>-->
 						<li class="active"><a href="#downloads"><span class="btnicon fa fa-cloud-download"></span>Download</a></li>
 					</ul>
 
