--- a/index_zh.html
+++ b/index_zh.html
@@ -121,7 +121,7 @@
                         <li><a href="#preview"><span class="btnicon fa fa-eye"></span>速览</a></li>
                         <li><a href="#support"><span class="btnicon fa fa-envelope-o"></span>支持</a></li>
                         <li><a href="mailto:web@vast-light.iask.in"><span class="btnicon fa fa-phone"></span>联系</a></li>
-                        <li class="active"><a href="dynamic/user/register.php"><span class="btnicon fa fa-user"></span>用户注册</a></li>
+                        <!--<li class="active"><a href="dynamic/user/register.php"><span class="btnicon fa fa-user"></span>用户注册</a></li>-->
                         <li class="active"><a href="#downloads"><span class="btnicon fa fa-cloud-download"></span>下载</a></li>
                     </ul>
 
