--- a/index_jp.html
+++ b/index_jp.html
@@ -121,7 +121,7 @@
                         <li><a href="#preview"><span class="btnicon fa fa-eye"></span>プレビュー</a></li>
                         <li><a href="#support"><span class="btnicon fa fa-envelope-o"></span>支援</a></li>
                         <li><a href="mailto:web@vast-light.iask.in"><span class="btnicon fa fa-phone"></span>連絡先</a></li>
-                        <li class="active"><a href="dynamic/user/register.php"><span class="btnicon fa fa-user"></span>ユーザー登録</a></li>
+                        <!--<li class="active"><a href="dynamic/user/register.php"><span class="btnicon fa fa-user"></span>ユーザー登録</a></li>-->
                         <li class="active"><a href="#downloads"><span class="btnicon fa fa-cloud-download"></span>ダウンロード</a></li>
                     </ul>
 
