Use external registration service.

--- a/index_jp.html
+++ b/index_jp.html
@@ -121,7 +121,7 @@
                         <li><a href="#preview"><span class="btnicon fa fa-eye"></span>プレビュー</a></li>
                         <li><a href="#support"><span class="btnicon fa fa-envelope-o"></span>支援</a></li>
                         <li><a href="mailto:web@vast-light.iask.in"><span class="btnicon fa fa-phone"></span>連絡先</a></li>
-                        <!--<li class="active"><a href="dynamic/user/register.php"><span class="btnicon fa fa-user"></span>ユーザー登録</a></li>-->
+                        <li class="active"><a href="https://login2.nide8.com:233/28f8f58a8a7f11e88feb525400b59b6a/register"><span class="btnicon fa fa-user"></span>ユーザー登録</a></li>
                         <li class="active"><a href="#downloads"><span class="btnicon fa fa-cloud-download"></span>ダウンロード</a></li>
                     </ul>
 
@@ -161,7 +161,7 @@
              <h4 class="wow fadeInUp" data-wow-duration="3s">機能:　</h4>
              <p class="wow fadeInDown" data-wow-duration="3s">マインクラフトのクライアント　モダンなデザイン (unofficial)；</p>
              <p class="wow fadeInDown" data-wow-duration="3s">ファンタスティックのパソコンゲーム体験。</p>
-             <p class="wow fadeInDown" data-wow-duration="3s">二のモードに：　ＲＰＧ　「Vast-Light World」　と　ノーマル　「マインクラフト　石英 - Minecraft QUARTZ」</p>
+             <p class="wow fadeInDown" data-wow-duration="3s">多いのゲームモードにあります。</p>
              <div id="downloads">
              <br /><br />
              <button class="wow fadeInDown after-button after-button-orange after-button-font-18px fa fa-cloud-download" onclick="window.open('down/vast-light_installer.exe')" data-wow-duration="4s"> クライアントのインスト</a></button>
