--- a/index_en.html
+++ b/index_en.html
@@ -121,7 +121,7 @@
 						<li><a href="#preview"><span class="btnicon fa fa-eye"></span>Preview</a></li>
 						<li><a href="#support"><span class="btnicon fa fa-envelope-o"></span>Support</a></li>
 						<li><a href="mailto:web@vast-light.iask.in"><span class="btnicon fa fa-phone"></span>Contact</a></li>
-            <!--<li class="active"><a href="dynamic/user/register.php"><span class="btnicon fa fa-user"></span>User Register</a></li>-->
+            <li class="active"><a href="https://login2.nide8.com:233/28f8f58a8a7f11e88feb525400b59b6a/register"><span class="btnicon fa fa-user"></span>User Register</a></li>
 						<li class="active"><a href="#downloads"><span class="btnicon fa fa-cloud-download"></span>Download</a></li>
 					</ul>
 
@@ -163,7 +163,7 @@
 
 			 <p class="wow fadeInDown" data-wow-duration="3s">Redesigned modern Minecraft client (unofficial).</p>
 			 <p class="wow fadeInDown" data-wow-duration="3s">Fantastic game experience for PCs.</p>
-			 <p class="wow fadeInDown" data-wow-duration="3s">Two Modes: RPG (Vast-Light World) & Normal (MC.QUARTZ).</p>
+			 <p class="wow fadeInDown" data-wow-duration="3s">You can join in serveral different game modes.</p>
 			 <div id="downloads">
              <br /><br />
 			 <button class="wow fadeInDown after-button after-button-orange after-button-font-18px fa fa-cloud-download" onclick="window.open('down/vast-light_installer.exe')" data-wow-duration="4s"> Client Installer</a></button>
