--- a/index_zh.html
+++ b/index_zh.html
@@ -121,7 +121,7 @@
                         <li><a href="#preview"><span class="btnicon fa fa-eye"></span>速览</a></li>
                         <li><a href="#support"><span class="btnicon fa fa-envelope-o"></span>支持</a></li>
                         <li><a href="mailto:web@vast-light.iask.in"><span class="btnicon fa fa-phone"></span>联系</a></li>
-                        <!--<li class="active"><a href="dynamic/user/register.php"><span class="btnicon fa fa-user"></span>用户注册</a></li>-->
+                        <li class="active"><a href="https://login2.nide8.com:233/28f8f58a8a7f11e88feb525400b59b6a/register"><span class="btnicon fa fa-user"></span>用户注册</a></li>
                         <li class="active"><a href="#downloads"><span class="btnicon fa fa-cloud-download"></span>下载</a></li>
                     </ul>
 
@@ -157,13 +157,13 @@
         <!-- LEFT PART OF THE ABOUT SECTION -->
          <div class="col-md-6">
             <div class="row">
-             <h2 class="wow fadeInDown" data-wow-duration="2s">浩光的我的世界服务器:</h2>
+             <h2 class="wow fadeInDown" data-wow-duration="2s">Minecraft Vast-Light:</h2>
 
              <h4 class="wow fadeInUp" data-wow-duration="3s">特性: </h4>
 
              <p class="wow fadeInDown" data-wow-duration="3s">重新设计的现代化我的世界客户端（非官方）；</p>
              <p class="wow fadeInDown" data-wow-duration="3s">无法想象的个人计算机游戏体验；</p>
-             <p class="wow fadeInDown" data-wow-duration="3s">两种模式： RPG （浩光域） 和 普通 （石英 - Minecraft QUARTZ）。</p>
+             <p class="wow fadeInDown" data-wow-duration="3s">可以参与多种游戏模式。</p>
              <div id="downloads">
              <br /><br />
              <button class="wow fadeInDown after-button after-button-orange after-button-font-18px fa fa-cloud-download" onclick="window.open('down/vast-light_installer.exe')" data-wow-duration="4s"> 客户端 安装器</font></a></button>
