Update contents & translations & font-awesome.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 var lang = navigator.language;
 document.write("Your language: " + lang);
 if (lang.indexOf("en") >= 0) self.location='index_en.html';
-if (lang.indexOf("ja") >= 0) self.location='index_jp.html';
+if (lang.indexOf("ja") >= 0) self.location='index_ja.html';
 if (lang.indexOf("zh") >= 0) self.location='index_zh.html';
 if (lang.indexOf("en") < 0 && lang.indexOf("ja") < 0 && lang.indexOf("zh") < 0) self.location='index_en.html';
 </script>
