--- a/index_ja.html
+++ b/index_ja.html
@@ -121,7 +121,7 @@
                         <li><a href="#about"><span class="btnicon fa fa-info"></span>情報</a></li>
                         <li><a href="#preview"><span class="btnicon fa fa-eye"></span>プレビュー</a></li>
                         <li><a href="#support"><span class="btnicon far fa-envelope"></span>支援</a></li>
-                        <li><a href="mailto:web@vast-light.iask.in"><span class="btnicon fa fa-phone"></span>連絡先</a></li>
+                        <li><a href="mailto:support@mail.cstu.gq"><span class="btnicon fa fa-phone"></span>連絡先</a></li>
                         <li class="active"><a href="https://login2.nide8.com:233/28f8f58a8a7f11e88feb525400b59b6a/register"><span class="btnicon fa fa-user"></span>ユーザー登録</a></li>
                         <li class="active"><a onclick="alert('开发中…');"><span class="btnicon fas fa-dollar-sign"></span>ユーザーチャージ</a></li>
                         <li class="active"><a href="#downloads"><span class="btnicon fas fa-cloud-download-alt"></span>ダウンロード</a></li>
@@ -177,7 +177,7 @@
 
          <!-- RIGHT PART OF THE ABOUT SECTION -->
          <div class="col-md-6 wow fadeInUp myphoto" data-wow-duration="4s">
-             <img src="img/user.png" alt="Using">
+             <img src="img/user.png" alt="Using" width="100%">
          </div><!-- RIGHT PART OF THE ABOUT SECTION END -->
      </div><!-- ABOUT SECTION END -->
      <!--
@@ -209,23 +209,23 @@
         <!-- PREVIEW ITEMS START -->
         <div class="row">
         	<h4>Vast-Light World</h4>
-               <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-duration="3s">
-                   <img src="img/s1.png" alt="">
-                   <h4>Item</h4>
-                   <p>Discription.</p>
-                </div> <!-- ITEM END -->
+            <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-duration="3s">
+                <img src="img/s1.png" alt="">
+                <h4>ロビー</h4>
+                <!--<p>Discription.</p>-->
+             </div> <!-- ITEM END -->
 
-                <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-duration="3s">
-                   <img src="img/s2.png" alt="">
-                   <h4>Item</h4>
-                   <p>Discription.</p>
-                </div> <!-- ITEM END -->
+             <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-duration="3s">
+                <img src="img/s2.png" alt="">
+                <h4>エンターテイメントセンター</h4>
+                <!--<p>Discription.</p>-->
+             </div> <!-- ITEM END -->
 
-                <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-duration="3s">
-                   <img src="img/s3.png" alt="">
-                   <h4>Item</h4>
-                   <p>Discription.</p>
-                </div> <!-- ITEM END -->
+             <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-duration="3s">
+                <img src="img/s3.png" alt="">
+                <h4>水中</h4>
+                <!--<p>Discription.</p>-->
+             </div> <!-- ITEM END -->
             <!--
 			<h4>マインクラフト　石英 - Minecraft QUARTZ</h4>
                <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-duration="3s">
@@ -292,7 +292,7 @@
                     <li><a href="#preview">プレビュー</a></li>
                     <li><a href="#support">支援</a></li>
 
-                    <li><a href="mailto:web@vast-light.iask.in">連絡先</a></li>
+                    <li><a href="mailto:support@mail.cstu.gq">連絡先</a></li>
                 </ul>
             </div><!-- FOOTER LINKS END -->
 
