--- a/index_zh.html
+++ b/index_zh.html
@@ -121,7 +121,7 @@
                         <li><a href="#about"><span class="btnicon fa fa-info"></span>关于</a></li>
                         <li><a href="#preview"><span class="btnicon fa fa-eye"></span>速览</a></li>
                         <li><a href="#support"><span class="btnicon far fa-envelope"></span>支持</a></li>
-                        <li><a href="mailto:web@vast-light.iask.in"><span class="btnicon fa fa-phone"></span>联系</a></li>
+                        <li><a href="https://jq.qq.com/?_wv=1027&k=5TgDXy6"><span class="btnicon fa fa-phone"></span>联系</a></li>
                         <li class="active"><a href="https://login2.nide8.com:233/28f8f58a8a7f11e88feb525400b59b6a/register"><span class="btnicon fa fa-user"></span>用户注册</a></li>
                         <li class="active"><a onclick="alert('开发中…');"><span class="btnicon fas fa-dollar-sign"></span>用户充值</a></li>
                         <li class="active"><a href="#downloads"><span class="btnicon fas fa-cloud-download-alt"></span>下载</a></li>
@@ -182,7 +182,7 @@
 
          <!-- RIGHT PART OF THE ABOUT SECTION -->
          <div class="col-md-6 wow fadeInUp myphoto" data-wow-duration="4s">
-             <img src="img/user.png" alt="Using">
+             <img src="img/user.png" alt="Using" width="100%">
          </div><!-- RIGHT PART OF THE ABOUT SECTION END -->
      </div><!-- ABOUT SECTION END -->
      <!--
@@ -214,23 +214,23 @@
         <!-- PREVIEW ITEMS START -->
         <div class="row">
         	<h4>浩光域</h4>
-               <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-duration="3s">
-                   <img src="img/s1.png" alt="">
-                   <h4>Item</h4>
-                   <p>Discription.</p>
-                </div> <!-- ITEM END -->
+            <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-duration="3s">
+                <img src="img/s1.png" alt="">
+                <h4>主城</h4>
+                <!--<p>Discription.</p>-->
+             </div> <!-- ITEM END -->
 
-                <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-duration="3s">
-                   <img src="img/s2.png" alt="">
-                   <h4>Item</h4>
-                   <p>Discription.</p>
-                </div> <!-- ITEM END -->
+             <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-duration="3s">
+                <img src="img/s2.png" alt="">
+                <h4>休闲中心</h4>
+                <!--<p>Discription.</p>-->
+             </div> <!-- ITEM END -->
 
-                <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-duration="3s">
-                   <img src="img/s3.png" alt="">
-                   <h4>Item</h4>
-                   <p>Discription.</p>
-                </div> <!-- ITEM END -->
+             <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-duration="3s">
+                <img src="img/s3.png" alt="">
+                <h4>水下</h4>
+                <!--<p>Discription.</p>-->
+             </div> <!-- ITEM END -->
             <!--
 			<h4>石英 - Minecraft QUARTZ</h4>
                <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-duration="3s">
@@ -297,7 +297,7 @@
                     <li><a href="#preview">速览</a></li>
                     <li><a href="#support">支持</a></li>
 
-                    <li><a href="mailto:web@vast-light.iask.in">联系</a></li>
+                    <li><a href="https://jq.qq.com/?_wv=1027&k=5TgDXy6">联系</a></li>
                 </ul>
             </div><!-- FOOTER LINKS END -->
 
