--- a/index_en.html
+++ b/index_en.html
@@ -121,7 +121,7 @@
 						<li><a href="#about"><span class="btnicon fa fa-info"></span>About</a></li>
 						<li><a href="#preview"><span class="btnicon fa fa-eye"></span>Preview</a></li>
 						<li><a href="#support"><span class="btnicon far fa-envelope"></span>Support</a></li>
-						<li><a href="mailto:web@vast-light.iask.in"><span class="btnicon fa fa-phone"></span>Contact</a></li>
+						<li><a href="mailto:support@mail.cstu.gq"><span class="btnicon fa fa-phone"></span>Contact</a></li>
 						<li class="active"><a href="https://login2.nide8.com:233/28f8f58a8a7f11e88feb525400b59b6a/register"><span class="btnicon fa fa-user"></span>User Register</a></li>
 						<li class="active"><a onclick="alert('Developing...');"><span class="btnicon fas fa-dollar-sign"></span>User Charge</a></li>
 						<li class="active"><a href="#downloads"><span class="btnicon fas fa-cloud-download-alt"></span>Download</a></li>
@@ -181,7 +181,7 @@
 
 		 <!-- RIGHT PART OF THE ABOUT SECTION -->
 		 <div class="col-md-6 wow fadeInUp myphoto" data-wow-duration="4s">
-			 <img src="img/user.png" alt="Using">
+			 <img src="img/user.png" alt="Using" width="100%">
 		 </div><!-- RIGHT PART OF THE ABOUT SECTION END -->
 	 </div><!-- ABOUT SECTION END -->
 	 <!--
@@ -215,20 +215,20 @@
 			<h4>Vast-Light World</h4>
 			   <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-duration="3s">
 				   <img src="img/s1.png" alt="">
-				   <h4>Item</h4>
-				   <p>Discription.</p>
+				   <h4>Lobby</h4>
+				   <!--<p>Discription.</p>-->
 				</div> <!-- ITEM END -->
 
 				<div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-duration="3s">
 				   <img src="img/s2.png" alt="">
-				   <h4>Item</h4>
-				   <p>Discription.</p>
+				   <h4>Entertainment Center</h4>
+				   <!--<p>Discription.</p>-->
 				</div> <!-- ITEM END -->
 
 				<div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-duration="3s">
 				   <img src="img/s3.png" alt="">
-				   <h4>Item</h4>
-				   <p>Discription.</p>
+				   <h4>Underwater</h4>
+				   <!--<p>Discription.</p>-->
 				</div> <!-- ITEM END -->
 			<!--
 			<h4>Minecraft QUARTZ</h4>
@@ -298,7 +298,7 @@
 					<li><a href="#preview">Preview</a></li>
 					<li><a href="#support">Support</a></li>
 
-					<li><a href="mailto:web@vast-light.iask.in">Contact</a></li>
+					<li><a href="mailto:support@mail.cstu.gq">Contact</a></li>
 				</ul>
 			</div><!-- FOOTER LINKS END -->
 
