--- a/index_en.html
+++ b/index_en.html
@@ -303,7 +303,7 @@
 			</div><!-- FOOTER LINKS END -->
 
 			<div class="copyright"><!-- FOOTER COPYRIGHT START -->
-				<p>Copyright by <i class="fa fa-copyright"></i> Vast-Light Studio</p>
+				<p>Powered by <i class="fa fa-copyright"></i> <a href="https://ccs.cstu.gq/changeLang.php?lang=en&amp;target=/" class="after-dim-link">Crystal Computer Studio</a> - TURX</p>
 			</div><!-- FOOTER COPYRIGHT END -->
 
 		 </div>
