--- a/index_ja.html
+++ b/index_ja.html
@@ -297,7 +297,7 @@
             </div><!-- FOOTER LINKS END -->
 
             <div class="copyright"><!-- FOOTER COPYRIGHT START -->
-                <p>Copyright by <i class="fa fa-copyright"></i> スタジオVast-Light</p>
+                <p>Powered by <i class="fa fa-copyright"></i> <a href="https://ccs.cstu.gq/changeLang.php?lang=ja&amp;target=/" class="after-dim-link">Crystalコンピュータースタジオ</a> - TURX</p>
                 <p>どうぞよろしくお願いいたします。</p>
             </div><!-- FOOTER COPYRIGHT END -->
 
