--- a/index_zh.html
+++ b/index_zh.html
@@ -302,7 +302,7 @@
             </div><!-- FOOTER LINKS END -->
 
             <div class="copyright"><!-- FOOTER COPYRIGHT START -->
-                <p>版权所有 <i class="fa fa-copyright"></i> 浩光域工作室</p>
+                <p>由 <i class="fa fa-copyright"></i> <a href="https://ccs.cstu.gq/changeLang.php?lang=zh&amp;target=/" class="after-dim-link">Crystal计算机工作室</a> - TURX 提供并驱动</p>
             </div><!-- FOOTER COPYRIGHT END -->
 
          </div>
