--- a/index_zh.html
+++ b/index_zh.html
@@ -57,6 +57,11 @@
     <link href="https://fonts.googleapis.com/earlyaccess/notosanstc.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/earlyaccess/notosanssc.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/earlyaccess/notosanskr.css" rel="stylesheet">
+    
+    <!-- ===========================
+    Chinese Download
+    =========================== -->
+    <script src="js/down.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -168,11 +173,10 @@
              <p class="wow fadeInDown" data-wow-duration="3s">独立的资源世界和休闲大厅。</p>
              <div id="downloads">
              <br /><br />
-             <button class="wow fadeInDown after-button after-button-orange after-button-font-18px fas fa-cloud-download-alt" onclick="window.open('down/vast-light_installer.exe')" data-wow-duration="4s"> 客户端 安装器</font></a></button>
-			 <button class="wow fadeInDown after-button after-button-lightsalmon after-button-font-14px fas fa-cloud-download-alt" onclick="window.open('https://download.microsoft.com/download/9/5/A/95A9616B-7A37-4AF6-BC36-D6EA96C8DAAE/dotNetFx40_Full_x86_x64.exe')" data-wow-duration="4s"> 运行库 安装器 (.NET 4)</a></button>
-
-
-
+             <button class="wow fadeInDown after-button after-button-orange after-button-font-18px fas fa-cloud-download-alt" onclick="window.open('down/vast-light_installer.exe')" data-wow-duration="4s"> 客户端 极速安装器</button>
+             <button class="wow fadeInDown after-button after-button-lightsalmon after-button-font-14px fas fa-cloud-download-alt" onclick="window.open('https://download.microsoft.com/download/9/5/A/95A9616B-7A37-4AF6-BC36-D6EA96C8DAAE/dotNetFx40_Full_x86_x64.exe')" data-wow-duration="4s"> 运行库 安装器 (.NET 4)</button>
+             <br />
+             <a class="wow fadeInDown after-text after-light-link" onclick="InstallFailed();" data-wow-duration="4s"> 安装出现问题？</a>
              </div>
              </div> <!-- ABOUT INFO END -->
 
