Payment method added.

--- a/index_en.html
+++ b/index_en.html
@@ -123,7 +123,7 @@
 						<li><a href="#support"><span class="btnicon far fa-envelope"></span>Support</a></li>
 						<li><a href="mailto:support@mail.cstu.gq"><span class="btnicon fa fa-phone"></span>Contact</a></li>
 						<li class="active"><a href="https://login2.nide8.com:233/28f8f58a8a7f11e88feb525400b59b6a/register"><span class="btnicon fa fa-user"></span>User Register</a></li>
-						<li class="active"><a onclick="alert('Developing...');"><span class="btnicon fas fa-dollar-sign"></span>User Charge</a></li>
+						<li class="active"><a onclick="alert('Please contact support@mail.cstu.gq.');"><span class="btnicon fas fa-dollar-sign"></span>User Charge</a></li>
 						<li class="active"><a href="#downloads"><span class="btnicon fas fa-cloud-download-alt"></span>Download</a></li>
 					</ul>
 
