--- a/index_ja.html
+++ b/index_ja.html
@@ -123,7 +123,7 @@
                         <li><a href="#support"><span class="btnicon far fa-envelope"></span>支援</a></li>
                         <li><a href="mailto:support@mail.cstu.gq"><span class="btnicon fa fa-phone"></span>連絡先</a></li>
                         <li class="active"><a href="https://login2.nide8.com:233/28f8f58a8a7f11e88feb525400b59b6a/register"><span class="btnicon fa fa-user"></span>ユーザー登録</a></li>
-                        <li class="active"><a onclick="alert('开发中…');"><span class="btnicon fas fa-dollar-sign"></span>ユーザーチャージ</a></li>
+                        <li class="active"><a onclick="alert('support@mail.cstu.gqは連絡ください。');"><span class="btnicon fas fa-dollar-sign"></span>ユーザーチャージ</a></li>
                         <li class="active"><a href="#downloads"><span class="btnicon fas fa-cloud-download-alt"></span>ダウンロード</a></li>
                     </ul>
 
