--- a/index_zh.html
+++ b/index_zh.html
@@ -128,7 +128,7 @@
                         <li><a href="#support"><span class="btnicon far fa-envelope"></span>支持</a></li>
                         <li><a href="https://jq.qq.com/?_wv=1027&k=5TgDXy6"><span class="btnicon fa fa-phone"></span>联系</a></li>
                         <li class="active"><a href="https://login2.nide8.com:233/28f8f58a8a7f11e88feb525400b59b6a/register"><span class="btnicon fa fa-user"></span>用户注册</a></li>
-                        <li class="active"><a onclick="alert('开发中…');"><span class="btnicon fas fa-dollar-sign"></span>用户充值</a></li>
+                        <li class="active"><a onclick="window.open('http://vastl.mcrmb.com/');"><span class="btnicon fas fa-dollar-sign"></span>用户充值</a></li>
                         <li class="active"><a href="#downloads"><span class="btnicon fas fa-cloud-download-alt"></span>下载</a></li>
                     </ul>
 
