summer update 2019 to 1.14

--- a/index_ja.html
+++ b/index_ja.html
@@ -89,7 +89,7 @@
         <div id="hero">
             <div class="container herocontent">
                 <h2 class="wow fadeInUp" data-wow-duration="2s">Vast-Light</h2>
-                <h4 class="wow fadeInDown" data-wow-duration="3s">マインクラフトサーバー。</h4>
+                <h4 class="wow fadeInDown" data-wow-duration="3s">マインクラフトサーバーの一つです。</h4>
             </div>
 
             <!-- Featured image on the Hero area -->
@@ -120,10 +120,8 @@
                     <ul class="nav navbar-nav navbar-right"><!--YOUR NAVIGATION ITEMS STRAT BELOW-->
                         <li><a href="#about"><span class="btnicon fa fa-info"></span>情報</a></li>
                         <li><a href="#preview"><span class="btnicon fa fa-eye"></span>プレビュー</a></li>
-                        <li><a href="#support"><span class="btnicon far fa-envelope"></span>支援</a></li>
                         <li><a href="mailto:support@mail.cstu.gq"><span class="btnicon fa fa-phone"></span>連絡先</a></li>
                         <li class="active"><a href="https://login2.nide8.com:233/28f8f58a8a7f11e88feb525400b59b6a/register"><span class="btnicon fa fa-user"></span>ユーザー登録</a></li>
-                        <li class="active"><a onclick="alert('support@mail.cstu.gqは連絡ください。');"><span class="btnicon fas fa-dollar-sign"></span>ユーザーチャージ</a></li>
                         <li class="active"><a href="#downloads"><span class="btnicon fas fa-cloud-download-alt"></span>ダウンロード</a></li>
                     </ul>
 
@@ -159,15 +157,15 @@
         <!-- LEFT PART OF THE ABOUT SECTION -->
          <div class="col-md-6">
             <div class="row">
-             <h2 class="wow fadeInDown" data-wow-duration="2s">ええと…　私たちはマインクラフトサーバーです。:</h2>
-             <h4 class="wow fadeInUp" data-wow-duration="3s">機能:　</h4>
-             <p class="wow fadeInDown" data-wow-duration="3s">ユニークなエッセンシャルプラグイン。</p>
+             <h2 class="wow fadeInDown" data-wow-duration="2s">いろいろな機能やゲーム体験があります:</h2>
+             <h4 class="wow fadeInUp" data-wow-duration="3s">例えば:　</h4>
+             <p class="wow fadeInDown" data-wow-duration="3s">ユニークな基本プラグイン。</p>
              <p class="wow fadeInDown" data-wow-duration="3s">スペシャルプロット環境とフライングコンディション。</p>
-             <p class="wow fadeInDown" data-wow-duration="3s">ユニークなリソース世界とゲームロビー。</p>
+             <p class="wow fadeInDown" data-wow-duration="3s">特別に設けされたのリソース世界とゲームロビー。</p>
+             <p class="wow fadeInDown" data-wow-duration="3s">中国の友達を作れます。</p>
              <div id="downloads">
              <br /><br />
-             <button class="wow fadeInDown after-button after-button-orange after-button-font-18px fas fa-cloud-download-alt" onclick="window.open('down/vast-light_installer.exe')" data-wow-duration="4s"> クライアントのインスト</a></button>
-			 <button class="wow fadeInDown after-button after-button-lightsalmon after-button-font-14px fas fa-cloud-download-alt" onclick="window.open('https://download.microsoft.com/download/9/5/A/95A9616B-7A37-4AF6-BC36-D6EA96C8DAAE/dotNetFx40_Full_x86_x64.exe')" data-wow-duration="4s"> ランタイムのインスト (.NET 4)</a></button>
+             <button class="wow fadeInDown after-button after-button-orange after-button-font-18px fas fa-cloud-download-alt" onclick="window.open('https://pan.baidu.com/s/1uulqWWOjBMyTSpReMe02Ng')" data-wow-duration="4s"> マンクラフト</a></button>
              </div>
              </div> <!-- ABOUT INFO END -->
 
@@ -209,21 +207,21 @@
         <!-- PREVIEW ITEMS START -->
         <div class="row">
         	<h4>Vast-Light World</h4>
-            <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-duration="3s">
-                <img src="img/s1.png" alt="">
-                <h4>ロビー</h4>
+            <div class="col-md-4 col-lg-4 wow fadeInUp" data-wow-duration="3s">
+                <img src="img/s1.png" class="after-img" alt="">
+                <h4>1.14</h4>
                 <!--<p>Discription.</p>-->
              </div> <!-- ITEM END -->
 
-             <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-duration="3s">
-                <img src="img/s2.png" alt="">
-                <h4>エンターテイメントセンター</h4>
+             <div class="col-md-4 col-lg-4 wow fadeInUp" data-wow-duration="3s">
+                <img src="img/s2.png" class="after-img" alt="">
+                <h4>スライム</h4>
                 <!--<p>Discription.</p>-->
              </div> <!-- ITEM END -->
 
-             <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-duration="3s">
-                <img src="img/s3.png" alt="">
-                <h4>水中</h4>
+             <div class="col-md-4 col-lg-4 wow fadeInUp" data-wow-duration="3s">
+                <img src="img/s3.png" class="after-img" alt="">
+                <h4>町</h4>
                 <!--<p>Discription.</p>-->
              </div> <!-- ITEM END -->
             <!--
@@ -252,18 +250,19 @@
     <!-- ===========================
     SUPPORT SECTION START
     =========================== -->
+    <!--
     <div id="support">
         <div class="sectionhead wow bounceInUp" data-wow-duration="2s">
           <span class="bigicon fas fa-pencil-alt"></span>
            <h3>支援</h3>
            <hr class="separetor">
            <h2>修理しています…</h2>
-        </div><!-- SUPPORT SECTION HEAD END -->
+        </div>--><!-- SUPPORT SECTION HEAD END -->
 
         <!-- SUPPORT ITEMS START -->
-        <div class="supportitems container">
-            <ul><div id="shotsByPlayerId"> </div></ul><!--REFER TO THE js/drifolio.js-->
-        </div><!-- SUPPORT ITEMS END -->
+        <!--<div class="supportitems container">
+            <ul><div id="shotsByPlayerId"> </div></ul>
+        </div>--><!-- SUPPORT ITEMS END -->
 
 <!--
     <form id="sgf" name="sgf" method="post" action="support/submit.asp">
@@ -276,7 +275,7 @@
 		<button class="wow fadeInDown after-button after-button-orangered after-button-font-14px fa fa-arrow-circle-right" onclick="sgf.submit()" data-wow-duration="2s"> 送信</a></button>
 	</form>
 -->
-    </div><!-- SUPPORT SECTION END -->
+    <!--</div>--><!-- SUPPORT SECTION END -->
 
     <!-- ===========================
     FOOTER START
@@ -290,15 +289,13 @@
                     <li><a href="#hero">主页</a></li>
                     <li><a href="#about">情報</a></li>
                     <li><a href="#preview">プレビュー</a></li>
-                    <li><a href="#support">支援</a></li>
-
+                    <!--<li><a href="#support">支援</a></li>-->
                     <li><a href="mailto:support@mail.cstu.gq">連絡先</a></li>
                 </ul>
             </div><!-- FOOTER LINKS END -->
 
             <div class="copyright"><!-- FOOTER COPYRIGHT START -->
                 <p>Powered by <i class="fa fa-copyright"></i> <a href="https://ccs.cstu.gq/changeLang.php?lang=ja&amp;target=/" class="after-dim-link">Crystalコンピュータースタジオ</a> - TURX</p>
-                <p>どうぞよろしくお願いいたします。</p>
             </div><!-- FOOTER COPYRIGHT END -->
 
          </div>
