--- a/index_en.html
+++ b/index_en.html
@@ -120,10 +120,8 @@
 					<ul class="nav navbar-nav navbar-right"><!--YOUR NAVIGATION ITEMS STRAT BELOW-->
 						<li><a href="#about"><span class="btnicon fa fa-info"></span>About</a></li>
 						<li><a href="#preview"><span class="btnicon fa fa-eye"></span>Preview</a></li>
-						<li><a href="#support"><span class="btnicon far fa-envelope"></span>Support</a></li>
 						<li><a href="mailto:support@mail.cstu.gq"><span class="btnicon fa fa-phone"></span>Contact</a></li>
 						<li class="active"><a href="https://login2.nide8.com:233/28f8f58a8a7f11e88feb525400b59b6a/register"><span class="btnicon fa fa-user"></span>User Register</a></li>
-						<li class="active"><a onclick="alert('Please contact support@mail.cstu.gq.');"><span class="btnicon fas fa-dollar-sign"></span>User Charge</a></li>
 						<li class="active"><a href="#downloads"><span class="btnicon fas fa-cloud-download-alt"></span>Download</a></li>
 					</ul>
 
@@ -166,10 +164,11 @@
 			 <p class="wow fadeInDown" data-wow-duration="3s">Different essential plugins.</p>
 			 <p class="wow fadeInDown" data-wow-duration="3s">Special plot environments and flying conditions.</p>
 			 <p class="wow fadeInDown" data-wow-duration="3s">Unique resourse world and recreation lobby.</p>
+			 <p class="wow fadeInDown" data-wow-duration="3s">Chinese friends.</p>
 			 <div id="downloads">
              <br /><br />
-			 <button class="wow fadeInDown after-button after-button-orange after-button-font-18px fas fa-cloud-download-alt" onclick="window.open('down/vast-light_installer.exe')" data-wow-duration="4s"> Client Installer</a></button>
-			 <button class="wow fadeInDown after-button after-button-lightsalmon after-button-font-14px fas fa-cloud-download-alt" onclick="window.open('https://download.microsoft.com/download/9/5/A/95A9616B-7A37-4AF6-BC36-D6EA96C8DAAE/dotNetFx40_Full_x86_x64.exe')" data-wow-duration="4s"><font face="Antic"> Runtime Installer (.NET 4)</font></a></button>
+			 <button class="wow fadeInDown after-button after-button-orange after-button-font-18px fas fa-cloud-download-alt" onclick="window.open('https://pan.baidu.com/s/1uulqWWOjBMyTSpReMe02Ng')" data-wow-duration="4s"> Client</a></button>
+			 <!--<button class="wow fadeInDown after-button after-button-lightsalmon after-button-font-14px fas fa-cloud-download-alt" onclick="window.open('https://download.microsoft.com/download/9/5/A/95A9616B-7A37-4AF6-BC36-D6EA96C8DAAE/dotNetFx40_Full_x86_x64.exe')" data-wow-duration="4s"><font face="Antic"> Runtime Installer (.NET 4)</font></a></button>-->
 			 <br /><br />
 			 </div>
 			 </div> <!-- ABOUT INFO END -->
@@ -213,21 +212,21 @@
 		<!-- PREVIEW ITEMS START -->
 		<div class="row">
 			<h4>Vast-Light World</h4>
-			   <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-duration="3s">
-				   <img src="img/s1.png" alt="">
-				   <h4>Lobby</h4>
+			   <div class="col-md-4 col-lg-4 wow fadeInUp" class="after-img" data-wow-duration="3s">
+				   <img src="img/s1.png" class="after-img" alt="">
+				   <h4>1.14</h4>
 				   <!--<p>Discription.</p>-->
 				</div> <!-- ITEM END -->
 
-				<div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-duration="3s">
-				   <img src="img/s2.png" alt="">
-				   <h4>Entertainment Center</h4>
+				<div class="col-md-4 col-lg-4 wow fadeInUp" class="after-img" data-wow-duration="3s">
+				   <img src="img/s2.png" class="after-img" alt="">
+				   <h4>Slimefun</h4>
 				   <!--<p>Discription.</p>-->
 				</div> <!-- ITEM END -->
 
-				<div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-duration="3s">
-				   <img src="img/s3.png" alt="">
-				   <h4>Underwater</h4>
+				<div class="col-md-4 col-lg-4 wow fadeInUp" class="after-img" data-wow-duration="3s">
+				   <img src="img/s3.png" class="after-img" alt="">
+				   <h4>Towny</h4>
 				   <!--<p>Discription.</p>-->
 				</div> <!-- ITEM END -->
 			<!--
@@ -254,37 +253,6 @@
 	</div><!-- PREVIEW SECTION END -->
 
 	<!-- ===========================
-	SUPPORT SECTION START
-	=========================== -->
-	<div id="support">
-		<div class="sectionhead wow bounceInUp" data-wow-duration="2s">
-		  <span class="bigicon fas fa-pencil-alt"></span>
-		   <h3>Support</h3>
-		   <hr class="separetor">
-		   <h2>Maintaining...</h2>
-		</div><!-- SUPPORT SECTION HEAD END -->
-
-		<!-- SUPPORT ITEMS START -->
-		<div class="supportitems container">
-			<ul><div id="shotsByPlayerId"> </div></ul><!--REFER TO THE js/drifolio.js-->
-		</div><!-- SUPPORT ITEMS END -->
-
-
-	<!--
-	<form id="sgf" name="sgf" method="post" action="support/submit.asp">
-		<input type="hidden" name="TYPE" value="support" />
-		<br />
-		Your nickname:&nbsp&nbsp&nbsp<input type="text" name="NAME" size="40" autocomplete="off" placeholder="Your nickname in Vast-Light." />
-		<br /><br />
-		Your saying:<br /><textarea name="CONT" style="width:480px;height:300px;" autocomplete="off" placeholder="Your suggestion/problem/warning for Vast-Light."></textarea>
-		<br /><br />
-		<button class="wow fadeInDown after-button after-button-orangered after-button-font-14px fa fa-arrow-circle-right" onclick="sgf.submit()" data-wow-duration="2s"> Submit</a></button>
-	</form>
-	-->
-
-	</div><!-- SUPPORT SECTION END -->
-
-	<!-- ===========================
 	FOOTER START
 	=========================== -->
 	<footer>
@@ -296,8 +264,6 @@
 					<li><a href="#hero">Home</a></li>
 					<li><a href="#about">About</a></li>
 					<li><a href="#preview">Preview</a></li>
-					<li><a href="#support">Support</a></li>
-
 					<li><a href="mailto:support@mail.cstu.gq">Contact</a></li>
 				</ul>
 			</div><!-- FOOTER LINKS END -->
