--- a/index_zh.html
+++ b/index_zh.html
@@ -125,10 +125,8 @@
                     <ul class="nav navbar-nav navbar-right"><!--YOUR NAVIGATION ITEMS STRAT BELOW-->
                         <li><a href="#about"><span class="btnicon fa fa-info"></span>关于</a></li>
                         <li><a href="#preview"><span class="btnicon fa fa-eye"></span>速览</a></li>
-                        <li><a href="#support"><span class="btnicon far fa-envelope"></span>支持</a></li>
                         <li><a href="https://jq.qq.com/?_wv=1027&k=5TgDXy6"><span class="btnicon fa fa-phone"></span>联系</a></li>
                         <li class="active"><a href="https://login2.nide8.com:233/28f8f58a8a7f11e88feb525400b59b6a/register"><span class="btnicon fa fa-user"></span>用户注册</a></li>
-                        <li class="active"><a onclick="window.open('http://vastl.mcrmb.com/');"><span class="btnicon fas fa-dollar-sign"></span>用户充值</a></li>
                         <li class="active"><a href="#downloads"><span class="btnicon fas fa-cloud-download-alt"></span>下载</a></li>
                     </ul>
 
@@ -173,10 +171,9 @@
              <p class="wow fadeInDown" data-wow-duration="3s">独立的资源世界和休闲大厅。</p>
              <div id="downloads">
              <br /><br />
-             <button class="wow fadeInDown after-button after-button-orange after-button-font-18px fas fa-cloud-download-alt" onclick="window.open('down/vast-light_installer.exe')" data-wow-duration="4s"> 客户端 极速安装器</button>
-             <button class="wow fadeInDown after-button after-button-lightsalmon after-button-font-14px fas fa-cloud-download-alt" onclick="window.open('https://download.microsoft.com/download/9/5/A/95A9616B-7A37-4AF6-BC36-D6EA96C8DAAE/dotNetFx40_Full_x86_x64.exe')" data-wow-duration="4s"> 运行库 安装器 (.NET 4)</button>
-             <br />
-             <a class="wow fadeInDown after-text after-light-link" onclick="InstallFailed();" data-wow-duration="4s"> 安装出现问题？</a>
+             <button class="wow fadeInDown after-button after-button-orange after-button-font-18px fas fa-cloud-download-alt" onclick="window.open('https://pan.baidu.com/s/1uulqWWOjBMyTSpReMe02Ng')" data-wow-duration="4s"> 客户端</button>
+             <!--<br />
+             <a class="wow fadeInDown after-text after-light-link" onclick="InstallFailed();" data-wow-duration="4s"> 安装出现问题？</a>-->
              </div>
              </div> <!-- ABOUT INFO END -->
 
@@ -218,21 +215,21 @@
         <!-- PREVIEW ITEMS START -->
         <div class="row">
         	<h4>浩光域</h4>
-            <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-duration="3s">
-                <img src="img/s1.png" alt="">
-                <h4>主城</h4>
+            <div class="col-md-4 col-lg-4 wow fadeInUp" class="after-img" data-wow-duration="3s">
+                <img src="img/s1.png" class="after-img" alt="">
+                <h4>1.14</h4>
                 <!--<p>Discription.</p>-->
              </div> <!-- ITEM END -->
 
-             <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-duration="3s">
-                <img src="img/s2.png" alt="">
-                <h4>休闲中心</h4>
+             <div class="col-md-4 col-lg-4 wow fadeInUp" class="after-img" data-wow-duration="3s">
+                <img src="img/s2.png" class="after-img" alt="">
+                <h4>粘液</h4>
                 <!--<p>Discription.</p>-->
              </div> <!-- ITEM END -->
 
-             <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-duration="3s">
-                <img src="img/s3.png" alt="">
-                <h4>水下</h4>
+             <div class="col-md-4 col-lg-4 wow fadeInUp" class="after-img" data-wow-duration="3s">
+                <img src="img/s3.png" class="after-img" alt="">
+                <h4>城镇</h4>
                 <!--<p>Discription.</p>-->
              </div> <!-- ITEM END -->
             <!--
@@ -259,35 +256,6 @@
     </div><!-- PREVIEW SECTION END -->
 
     <!-- ===========================
-    SUPPORT SECTION START
-    =========================== -->
-    <div id="support">
-        <div class="sectionhead wow bounceInUp" data-wow-duration="2s">
-          <span class="bigicon fas fa-pencil-alt"></span>
-           <h3>支持</h3>
-           <hr class="separetor">
-           <h2>维护中…</h2>
-        </div><!-- SUPPORT SECTION HEAD END -->
-
-        <!-- SUPPORT ITEMS START -->
-        <div class="supportitems container">
-            <ul><div id="shotsByPlayerId"> </div></ul><!--REFER TO THE js/drifolio.js-->
-        </div><!-- SUPPORT ITEMS END -->
-
-<!--
-    <form id="sgf" name="sgf" method="post" action="support/submit.asp">
-		<input type="hidden" name="TYPE" value="support" />
-		<br />
-		您的游戏名:&nbsp&nbsp&nbsp<input type="text" name="NAME" size="40" autocomplete="off" placeholder="您在浩光域的游戏名。" />
-		<br /><br />
-		您要说的话:<br /><textarea name="CONT" style="width:480px;height:300px;" autocomplete="off" placeholder="您对于浩光域的的建议/问题/警告。"></textarea>
-		<br /><br />
-		<button class="wow fadeInDown after-button after-button-orangered after-button-font-14px fa fa-arrow-circle-right" onclick="sgf.submit()" data-wow-duration="2s"> 提交</a></button>
-	</form>
--->
-    </div><!-- SUPPORT SECTION END -->
-
-    <!-- ===========================
     FOOTER START
     =========================== -->
     <footer>
@@ -299,8 +267,6 @@
                     <li><a href="#hero">主页</a></li>
                     <li><a href="#about">关于</a></li>
                     <li><a href="#preview">速览</a></li>
-                    <li><a href="#support">支持</a></li>
-
                     <li><a href="https://jq.qq.com/?_wv=1027&k=5TgDXy6">联系</a></li>
                 </ul>
             </div><!-- FOOTER LINKS END -->
